fix spacing for radio button forms and joint crisis committees

--- a/ui/src/committees/committees.css
+++ b/ui/src/committees/committees.css
@@ -61,6 +61,11 @@
     overflow-y: auto;
 }
 
+.committees-list__joint_crisis {
+    /* Make JCCs taller to accommodate room info */
+    height: 24em;
+}
+
 .committees-list__committee-details {
     display: none;
 }
