--- a/ui/src/info-page/info-page.css
+++ b/ui/src/info-page/info-page.css
@@ -7,3 +7,7 @@
 
     color: var(--color-dark);
 }
+
+.registration-link {
+	font-size: 1.6em;
+}
